[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/UI/layers/dashboard/panels/item_slot/ItemSlot.gd" type="Script" id=1]

[node name="ItemSlot" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1110.0
margin_bottom = -738.0
rect_min_size = Vector2( 256, 16 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 249.0
margin_bottom = 23.0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 242.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="AmountLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
text = "[0]"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
expand = true
stretch_mode = 7

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_top = 1.0
margin_right = 242.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "[NAME]"

[node name="InteractionMenu" type="GridContainer" parent="VBoxContainer"]
visible = false
margin_left = 10.0
margin_top = 20.0
margin_right = 232.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 4

[node name="Equip" type="Button" parent="VBoxContainer/InteractionMenu"]
margin_right = 47.0
margin_bottom = 20.0
text = "Equip"

[node name="Unequip" type="Button" parent="VBoxContainer/InteractionMenu"]
margin_left = 51.0
margin_right = 117.0
margin_bottom = 20.0
text = "Unequip"

[node name="Discard" type="Button" parent="VBoxContainer/InteractionMenu"]
margin_left = 121.0
margin_right = 181.0
margin_bottom = 20.0
text = "Discard"

[node name="Use" type="Button" parent="VBoxContainer/InteractionMenu"]
margin_left = 185.0
margin_right = 222.0
margin_bottom = 20.0
text = "Use"

[node name="Node" type="Node" parent="."]

[node name="Control" type="Control" parent="Node"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="gui_input" from="." to="." method="_on_ItemSlot_gui_input"]
[connection signal="pressed" from="VBoxContainer/InteractionMenu/Equip" to="." method="_on_Equip_pressed"]
[connection signal="pressed" from="VBoxContainer/InteractionMenu/Unequip" to="." method="_on_Unequip_pressed"]
[connection signal="pressed" from="VBoxContainer/InteractionMenu/Discard" to="." method="_on_Discard_pressed"]
[connection signal="pressed" from="VBoxContainer/InteractionMenu/Use" to="." method="_on_Use_pressed"]
[connection signal="gui_input" from="Node/Control" to="." method="_on_Control_gui_input"]
